# ZbQuotes

./: .gitignore  README.md  act.sh  alembic.ini  logger_example.py  mbank_pol_yf_to_isin.json  pyproject.toml  requirements.txt
.windsurf/rules/: ai_contract.py  python_imports.md  python_typing.md  rules.md
docs/: doc.md
migrations/: env.py
migrations/versions/: 00f8b321b75a_add_unique_constraints_to_quote_tables.py  0c87021035dc_initial.py  24cdea75d4ee_initial.py  25b283db4503_fk_market_gfi.py  343174a692f1_fk_qt_pips.py  46ed47e4aafd_added_fk_for_dividend.py  8a3ae9cd5d1e_initial.py  90b915deb5a4_sqlalchemy_2_0_currency_as_.py  9e3bdce8e3b8_added_adj_close_column.py  ad914f56ade5_initial.py  b4bdb43fb709_added_new_fk_dividends.py  c0040be9060b_add_unique_constraints_to_dividend_and_.py  cb0c6af3e3cf_initial_schema.py  e6f14e747aab_better_precision_for_quotes.py  ff2e17be9384_initial.py  ff79bc231740_fk_qt_pips.py  fff54c53729f_added_adj_close_column_save.py
resources/data/processed_data/: country.csv  country.json  country.sql  mb_foreign_all.csv  mb_foreign_all.json  mb_foreign_not_found_in_yf.csv  mb_pol_open_figi.csv  mb_pol_open_figi.json  mb_pol_yf_ticker_to_isin.json  readme.md  yf_info_mb_foreign_skipped.json  yf_info_mb_polish.json  (+1 more)
scripts/: activate_vfits.py  process_yf_info.py  recreate_db.sh  seed.py  seed_vfits.py  seeds_gfi.py  test_paths.py
scripts/sql/: get_polish_top_cap_30-q.sql  get_polish_top_cap_30.sql  get_shares_top_30.sql
src/: config.py  main.py
src/zb_quotes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
