[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zb-quotes"
version = "0.1.0"
description = "Quote management system"
authors = [{ name = "zbyszek" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]